log
Thu 07 Sep 2023 06:57:48 PM UTC: 
 tests:  0|6
total_score: 0/70
5296214
Thu 07 Sep 2023 07:12:44 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:21: error: ‘Node’ undeclared (first use in this function)
   60 |     map->buckets = (Node **)malloc(sizeof(Node *) * capacity);
      |                     ^~~~
hashmap.c:60:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:28: error: expected expression before ‘)’ token
   60 |     map->buckets = (Node **)malloc(sizeof(Node *) * capacity);
      |                            ^
Compilation failed
d2227ce
Thu 07 Sep 2023 07:14:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
dca32b3
Thu 07 Sep 2023 07:15:58 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
daa5726
Thu 07 Sep 2023 07:28:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:19: error: unused variable ‘index’ [-Werror=unused-variable]
   43 |     unsigned long index = hash(key,map->capacity);
      |                   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b02d803
Thu 07 Sep 2023 07:41:57 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:71: error: comparison between pointer and integer [-Werror]
   44 |     if (map->buckets[position] == NULL || map->buckets[position]->key == -1){
      |                                                                       ^~
hashmap.c:45:15: error: unused variable ‘newPair’ [-Werror=unused-variable]
   45 |         Pair *newPair = createPair(key,value);
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6522f00
Thu 07 Sep 2023 07:42:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:15: error: unused variable ‘newPair’ [-Werror=unused-variable]
   45 |         Pair *newPair = createPair(key,value);
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c9c564e
Thu 07 Sep 2023 07:45:32 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:16: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘data’
   46 |         newElem->data = data;
      |                ^~
hashmap.c:46:25: error: ‘data’ undeclared (first use in this function)
   46 |         newElem->data = data;
      |                         ^~~~
hashmap.c:46:25: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:47:16: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   47 |         newElem->key = key;
      |                ^~
hashmap.c:48:32: error: assignment to ‘Pair *’ from incompatible pointer type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   48 |         map->buckets[position] = newElem;
      |                                ^
cc1: all warnings being treated as errors
Compilation failed
8b7cb64
Thu 07 Sep 2023 07:46:15 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
62bea44
Thu 07 Sep 2023 11:14:00 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
908d90b
Thu 07 Sep 2023 11:34:15 PM UTC: 
 hashmap.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:16: error: ‘Pair’ has no member named ‘next’
   62 |         newElem->next = map->buckets[position]->next;
      |                ^~
hashmap.c:62:47: error: ‘Pair’ has no member named ‘next’
   62 |         newElem->next = map->buckets[position]->next;
      |                                               ^~
hashmap.c:63:31: error: ‘Pair’ has no member named ‘next’
   63 |         map->buckets[position]->next = newElem;
      |                               ^~
Compilation failed
e47063c
Thu 07 Sep 2023 11:34:30 PM UTC: 
 hashmap.c | 23 +++++------------------
 1 file changed, 5 insertions(+), 18 deletions(-)
 tests:  2|5
total_score: 20/70
e3642c6
Thu 07 Sep 2023 11:36:55 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 20/70
96d8d42
Thu 07 Sep 2023 11:45:33 PM UTC: 
 hashmap.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:5: error: expected ‘}’ before ‘else’
   53 |     else{
      |     ^~~~
hashmap.c:54:16: error: ‘Pair’ has no member named ‘next’
   54 |         newElem->next = map->buckets[position]->next;
      |                ^~
hashmap.c:54:47: error: ‘Pair’ has no member named ‘next’
   54 |         newElem->next = map->buckets[position]->next;
      |                                               ^~
hashmap.c:55:31: error: ‘Pair’ has no member named ‘next’
   55 |         map->buckets[position]->next = newElem;
      |                               ^~
Compilation failed
fcd60cd
Thu 07 Sep 2023 11:45:50 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:16: error: ‘Pair’ has no member named ‘next’
   55 |         newElem->next = map->buckets[position]->next;
      |                ^~
hashmap.c:55:47: error: ‘Pair’ has no member named ‘next’
   55 |         newElem->next = map->buckets[position]->next;
      |                                               ^~
hashmap.c:56:31: error: ‘Pair’ has no member named ‘next’
   56 |         map->buckets[position]->next = newElem;
      |                               ^~
Compilation failed
623b669
Thu 07 Sep 2023 11:49:19 PM UTC: 
 hashmap.c | 21 +++++++++++++--------
 1 file changed, 13 insertions(+), 8 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:23: error: ‘Pair’ has no member named ‘next’
   55 |         while (current->next != NULL && !is_equal(current->key, key)) {
      |                       ^~
hashmap.c:56:30: error: ‘Pair’ has no member named ‘next’
   56 |             current = current->next;
      |                              ^~
hashmap.c:61:20: error: ‘Pair’ has no member named ‘next’
   61 |             current->next = newElem;
      |                    ^~
Compilation failed
8bdd7bc
Thu 07 Sep 2023 11:58:51 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++++++---------------
 1 file changed, 23 insertions(+), 15 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:60:25: error: ‘original_position’ undeclared (first use in this function)
   60 |         if (position == original_position) {
      |                         ^~~~~~~~~~~~~~~~~
hashmap.c:60:25: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:45:19: error: unused variable ‘orPosition’ [-Werror=unused-variable]
   45 |     unsigned long orPosition = position;
      |                   ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9634af
